---
references:
  - "File: /data_management.py"
  - "File: /kernels.py"
  - "File: /main.py"
  - "File: /optimizer.py"
  - "File: /simulator.py"
  - "File: /surrogate_models.py"
generationTime: 2026-09-16T15:47:22.324Z
---
erDiagram
    EXPERIMENT_DATA ||--o{ OBSERVATION : stores
    EXPERIMENT_DATA ||--o{ FIDELITY_LEVEL : defines
    FIDELITY_LEVEL ||--o{ OBSERVATION : contains
    MULTIFIDELITY_MODEL ||--|{ GAUSSIAN_PROCESS : manages
    GAUSSIAN_PROCESS ||--|| KERNEL : uses
    KERNEL ||--o| SQUARED_EXPONENTIAL_KERNEL : specializes
    MULTIFIDELITY_MODEL ||--o{ FIDELITY_LEVEL : predicts
    ACQUISITION_FUNCTION ||--|| MULTIFIDELITY_MODEL : evaluates
    ACQUISITION_FUNCTION ||--|| EXPERIMENT_DATA : reads
    EGO_OPTIMIZER ||--|| EXPERIMENT_DATA : updates
    EGO_OPTIMIZER ||--|| MULTIFIDELITY_MODEL : trains
    EGO_OPTIMIZER ||--|| ACQUISITION_FUNCTION : uses
    EGO_OPTIMIZER ||--|| SIMULATOR : evaluates

    EXPERIMENT_DATA {
        string bounds
        string costs
        int dimension
        string X_dict
        string Y_dict
    }

    FIDELITY_LEVEL {
        int level PK
        float cost
    }

    OBSERVATION {
        int observation_id PK
        int level FK
        string input_vector
        float output_value
    }

    MULTIFIDELITY_MODEL {
        int model_id PK
        int number_of_levels
        string correlation_coefficients
    }

    GAUSSIAN_PROCESS {
        int process_id PK
        int level FK
        float noise
        string training_data
    }

    KERNEL {
        int kernel_id PK
        string lengthscale
        float signal_variance
        float bias_variance
    }

    SQUARED_EXPONENTIAL_KERNEL {
        int kernel_id PK
        string covariance_parameters
    }

    ACQUISITION_FUNCTION {
        int acquisition_id PK
        string merit_function
        float cost_ratio
        float information_ratio
    }

    EGO_OPTIMIZER {
        int optimizer_id PK
        int iteration_count
        string search_bounds
    }

    SIMULATOR {
        int simulator_id PK
        int number_of_levels
        float target_cl
    }